[package]
name = "bluenoise-rs"
description = "A basic blue noise generator"
license = "MIT"
repository = "https://github.com/jwagner/bluenoise-rs"
categories = ["image-processing"]
keywords = ["noise", "dithering", "noise", "void-and-cluster"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
image = "0.24.9"
rand = "0.8.5"
rand_chacha = "0.3.1"
